# paper-lattice

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  GITHUB_STRATEGY.md  PRODUCT_SPEC.md
domain_packs/: crystal_plasticity.yaml
examples/: crystal_plasticity_seed.bib  crystal_plasticity_seed.md  make_crystal_plasticity_pdf.py
examples/demo_library/: crystal_plasticity_notes.md  references.bib
examples/outputs/: crystal_plasticity_cards.json  crystal_plasticity_cards.md  crystal_plasticity_matrix.csv  crystal_plasticity_matrix.md  demo_library_import_report.json
src/paper_lattice/: __init__.py  agents.py  bibtex.py  cards.py  cli.py  domain.py  evidence.py  ingest.py  library.py  matrix.py  models.py  retrieve.py  storage.py  web.py
tests/: test_bibtex.py  test_cards.py  test_library.py  test_matrix.py  test_pdf_ingest.py  test_retrieve.py  test_web.py
