[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-lattice"
version = "0.1.0"
description = "Agentic RAG literature atlas for evidence-grounded research synthesis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "PaperLattice contributors" }
]
keywords = [
  "rag",
  "agents",
  "literature-review",
  "research",
  "crystal-plasticity",
  "evidence-graph"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Indexing"
]
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
dev = ["pytest>=8.0"]

[project.scripts]
paper-lattice = "paper_lattice.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
